feat: add LoginScreenRouteTest and refactor various classes for improved functionality and error handling